--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,7 +33,33 @@ body {
     color: purple;
 }
 
+.wrapper .sidebar {
+    position: fixed;
+    background: #007bff;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 100%;
+    padding: 20px 0;
+    z-index: 9;
+    color: white
+}
+
+.avatar {
+    height: 100px;
+    width: 100px;
+    background: red;
+    border-radius: 100px;
+}
+
+
+
 .live-demo-link {
     display: block;
     margin: 1rem;
 }
+
+.single-task {
+    width: 1500px;
+}
+
