--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: "Poppins", sans-serif;
+    overflow-x: hidden;
 }
 
 .site-header {
@@ -33,16 +34,43 @@ body {
     color: purple;
 }
 
-.wrapper .sidebar {
+.wrapper {
+    display: flex;
+}
+
+.sidebar {
+    width: 0;
+    height: 100vh;
+    background: #333;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
     position: fixed;
-    background: #007bff;
-    top: 0;
-    left: 0;
-    width: 300px;
-    height: 100%;
-    padding: 20px 0;
-    z-index: 9;
-    color: white
+    z-index: 1;
+}
+
+.sidebar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.menu-item-link {
+    display: block;
+    padding: 1rem 0;
+    width: 100%;
+    text-decoration: none;
+    color: white;
+}
+
+.menu-item-link:hover {
+    background: white;
+    color: #007bff;
+}
+
+.menu-item-link span {
+    display: block;
+    padding-left: 2rem;
 }
 
 .avatar {
@@ -52,14 +80,41 @@ body {
     border-radius: 100px;
 }
 
-
+.content {
+    margin: 2rem;
+    flex: 1
+}
 
 .live-demo-link {
     display: block;
     margin: 1rem;
 }
 
-.single-task {
-    width: 1500px;
+.menu-btn {
+    font-size: 30px;
+    cursor: pointer;
+    position: fixed;
+    margin-left: 10px;
+    z-index: 2;
+    display: none;
 }
 
+@media screen and (max-width: 600px) {
+    .sidebar {
+        width: 0;
+    }
+
+    .content {
+        margin-left: 0;
+    }
+
+    .menu-btn {
+        display: block;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .menu-btn {
+        display: block;
+    }
+}
